<resources>
    <string name="app_name">TeamTalk Plus</string>
    <string name="action_add">Add</string>
    <string name="action_banchan">Ban from current channel</string>
    <string name="action_reply">Reply</string>
    <string name="action_banned_users">Channel Banned Users</string>
    <string name="action_bans_short">Bans</string>
    <string name="action_bansrv">Ban from server</string>
    <string name="action_broadcast">Global Message</string>
    <string name="action_choose_destination">Choose Destination</string>
    <string name="action_connect">Connect</string>
    <string name="action_createchannel">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_show_password">Show Password</string>
    <string name="action_subscriptions">Subscriptions</string>
    <string name="action_copy_password">Copy Password</string>
    <string name="msg_password_copied">Password copied to clipboard</string>
    <string name="msg_username_copied">Username copied to clipboard</string>
    <string name="msg_channelname_copied">Channel name copied to clipboard</string>
    <string name="msg_note_copied">Note copied to clipboard</string>
    <string name="title_account_password">Account Password</string>
    <string name="label_server_version">Server Version:</string>
    <string name="action_deselect">Deselect For Move</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_user">Edit user account</string>
    <string name="action_editsrv">Edit server</string>
    <string name="indicator_selected"> [X]</string>
    <string name="tt_instance_info">TeamTalk instance 0x%1$s %2$s</string>
    <string name="tt_instance_connected">running v. %1$s connected</string>
    <string name="tt_instance_disconnected">disconnected</string>
    <string name="video_format_info">%1$dx%2$d %3$d-bit</string>
    <string name="action_edituser">User properties</string>
    <string name="action_exit">Exit</string>
    <string name="action_export_serverlist">Export server list</string>
    <string name="action_exportsrv">Export server</string>
    <string name="action_import_serverlist">Import from a .tt File</string>
    <string name="action_join">Join</string>
    <string name="action_leave">Leave Channel</string>
    <string name="action_move_short">Move</string>
    <string name="action_new_channel">New Channel</string>
    <string name="action_select_all">Select All</string>
    <string name="pref_soundevent_typing">Private Chat Typing</string>
    <string name="pref_soundevent_typing_summ">Play sound when a user is typing a private message</string>
    <string name="action_stream">Stream a media file</string>
    <string name="action_upload">Upload File</string>
    <string name="pref_title_sound_pack">Sound Pack</string>
    <string name="pref_summary_sound_pack">Select a custom sound pack</string>
    <string name="pref_title_mute_all_audio_icon">Sound: Mute all</string>
    <string name="pref_summary_mute_all_audio_icon">Play sound when speakers are muted</string>
    <string name="pref_title_unmute_all_audio_icon">Sound: Unmute all</string>
    <string name="pref_summary_unmute_all_audio_icon">Play sound when speakers are unmuted</string>
    <string name="contrib_1">João Almeida</string>
    <string name="libraries_list">ACE, FFmpeg, Ogg, OpenSSL, Opus, Opus-tools, Speex, SpeexDSP, WebM, Zlib</string>
    <string name="commands_interval">Commands Interval (milliseconds)</string>
    <string name="commands_interval_hint">e.g. 1000</string>
    <string name="commands_limit">Commands Limit (count)</string>
    <string name="commands_limit_hint">0 for no limit</string>
    <string name="log_channel_create">Channel Create/Modify</string>
    <string name="log_file_transfer">File Transfer</string>
    <string name="log_server_update">Server Update</string>
    <string name="log_user_kick">User Kick/Ban</string>
    <string name="log_user_login">User logged in</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_show_log_messages">Show log messages in chat history</string>
    <string name="pref_summary_bearwareid">Setup BearWare.dk WebLogin</string>
    <string name="pref_summary_broadcast_message_audio_icon">Play sound when global message is received</string>
    <string name="pref_summary_channel_message_audio_icon">Play sound when channel message is received</string>
    <string name="pref_summary_channel_message_sent_audio_icon">Play sound when channel message is sent</string>
    <string name="pref_summary_files_update_audio_icon">Play sound when files are added or removed</string>
    <string name="pref_summary_font_scale">Adjust text size in messages (50%% to 300%%)</string>
    <string name="pref_summary_gender">Choose your gender</string>
    <string name="pref_summary_intercept_audio_icon">Play sound when intercept starts or ends</string>
    <string name="pref_summary_language">Select application language</string>
    <string name="pref_summary_move_talking">Move talking users to the top of users list</string>
    <string name="pref_summary_private_message_audio_icon">Play sound when private message is received</string>
    <string name="pref_summary_user_message_sent_audio_icon">Play sound when private message is sent</string>
    <string name="pref_summary_rx_tx_audio_icon">Play sound when TX button is pressed</string>
    <string name="pref_summary_server_lost_audio_icon">Play sound when connection is dropped</string>
    <string name="pref_summary_show_usernames">Show usernames instead of nicknames</string>
    <string name="pref_summary_transmitready_icon">Play sound when transmit ready in "No Interruptions" channel</string>
    <string name="pref_summary_userjoin_icon">Play sound when user joins to the current channel</string>
    <string name="pref_summary_userleft_icon">Play sound when user leaves the current channel</string>
    <string name="pref_summary_userloggedin_icon">Play sound when an user logs in</string>
    <string name="pref_summary_userloggedoff_icon">Play sound when an user logs off</string>
    <string name="pref_summary_vox_audio_icon">Play sound when voice activation button is pressed</string>
    <string name="pref_summary_vox_triggered_icon">Play sound when voice activation is triggered</string>
    <string name="pref_title_bearwareid">BearWare.dk WebLogin</string>
    <string name="pref_title_broadcast_message_audio_icon">Global message</string>
    <string name="pref_title_channel_message_audio_icon">Channel message received</string>
    <string name="pref_title_channel_message_sent_audio_icon">Channel message sent</string>
    <string name="pref_title_contrib">Developers</string>
    <string name="pref_title_files_update_audio_icon">File list updated</string>
    <string name="pref_title_font_scale">Font scale in history</string>
    <string name="pref_title_gender">Gender</string>
    <string name="pref_title_intercept_audio_icon">Intercept sound</string>
    <string name="pref_title_keep_screen_on">Keep screen on when connected</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_libraries">Third Party Libraries</string>
    <string name="pref_title_move_talking">Move talking users to top</string>
    <string name="pref_title_nickname">Nickname</string>
    <string name="pref_title_private_message_audio_icon">Private message</string>
    <string name="pref_title_user_message_sent_audio_icon">Private message sent</string>
    <string name="pref_title_proximity_sensor">Proximity sensor</string>
    <string name="pref_title_rx_tx_audio_icon">Voice transmission toggle</string>
    <string name="pref_title_server_login_icon">Sound: My login to server</string>
    <string name="pref_summary_server_login_icon">Play sound when I log in to a server</string>
    <string name="pref_title_server_logout_icon">Sound: My logout from server</string>
    <string name="pref_summary_server_logout_icon">Play sound when I log out from a server</string>
    <string name="pref_title_server_lost_audio_icon">Server connection lost</string>
    <string name="pref_title_show_usernames">Show usernames</string>
    <string name="pref_title_translator">Translator</string>
    <string name="pref_title_transmitready_icon">Exclusive mode toggled</string>
    <string name="pref_title_userjoin_icon">User joined channel</string>
    <string name="pref_title_userleft_icon">User left channel</string>
    <string name="pref_title_userloggedin_icon">User logged in</string>
    <string name="pref_title_userloggedoff_icon">User logged off</string>
    <string name="pref_title_vibrate">Vibrate on PTT</string>
    <string name="pref_title_vox_audio_icon">Voice activation toggle</string>
    <string name="pref_title_vox_triggered_icon">Voice activation triggered</string>
    <string name="pref_title_myself_leave_icon">Sound: My leave channel</string>
    <string name="pref_summary_myself_leave_icon">Play sound when I leave a channel</string>
    <string name="right_ban_users">Ban Users</string>
    <string name="right_change_nickname">Change Nickname</string>
    <string name="right_create_temp_chan">Create Temp Channels</string>
    <string name="right_desktop_access">Remote Desktop Access</string>
    <string name="right_download_files">Download Files</string>
    <string name="right_kick_users">Kick Users</string>
    <string name="right_media_file_audio">Stream Audio Files</string>
    <string name="right_media_file_video">Stream Video Files</string>
    <string name="right_modify_chans">Modify Channels</string>
    <string name="right_move_users">Move Users</string>
    <string name="right_multi_login">Multi Login</string>
    <string name="right_operator_enable">Make Users Channel Operator</string>
    <string name="right_record_voice">Record Voice</string>
    <string name="right_text_broadcast">Global Text Messages</string>
    <string name="right_textmessage_channel">Send Text Messages to Channels</string>
    <string name="right_textmessage_user">Send Text Messages to Users</string>
    <string name="right_transmit_desktop">Transmit Desktop</string>
    <string name="right_transmit_video">Transmit Video</string>
    <string name="right_transmit_voice">Transmit Voice</string>
    <string name="right_update_server_properties">Edit Server Properties</string>
    <string name="right_upload_files">Upload Files</string>
    <string name="right_user_rights_all">All Rights</string>
    <string name="right_view_all_users">View All Users</string>
    <string name="right_view_hidden_channels">See Hidden Channels</string>
    <string name="tab_logging_events">Logging Events</string>
    <string name="text_translator">João Almeida</string>
    <string name="user_prop_title_subscribe_user_msg">Subscribe user messages</string>
    <string name="user_prop_title_subscribe_voice">Subscribe voice</string>
    <string name="user_prop_title_subscribe_vid">Subscribe video</string>
    <string name="user_prop_title_subscribe_desk">Subscribe desktop</string>
    <string name="user_prop_title_subscribe_media">Subscribe media</string>
    <string name="pref_header_display">Appearance</string>
    <string name="pref_title_channel_sort">Filter Channel By</string>
    <string name="pref_summary_channel_sort">Choose how channels are sorted</string>
    <string name="scope_you">You</string>
    <string name="pref_title_myself_join_icon">Myself join sound</string>
    <string name="pref_summary_myself_join_icon">Play sound when you join a channel</string>
    <string name="pref_title_sound_app_open">App Open</string>
    <string name="pref_summary_sound_app_open">Play sound when the application is opened</string>
    <string name="pref_title_sound_accessibility_volume">Use accessibility volume</string>
    <string name="pref_summary_sound_accessibility_volume">Sounds will be played through accessibility volume. Uncheck to use media volume</string>
</resources>